--- a/src/all-projects.css
+++ b/src/all-projects.css
@@ -3,8 +3,10 @@
     grid-template-columns: 1fr;
     gap : 10px;
     justify-content: center;
-    margin-top: 20px;
+    margin: 20px auto;
     justify-items: center;
+    max-width: 100%;
+    padding: 0 20px;
 }
 .project {
     background: white;
@@ -13,20 +15,22 @@
     padding: 20px;
     width: 100%;
     max-width: 300px;
-    transition: transofrm 0.3s;
+    transition: transform 0.3s;
 }
-project.hover {
+.project:hover {
     transform: translateY(-10px);
 }
-@media (min-width: 600px) {
+@media (min-width:720px) {
     .all-projects {
         grid-template-columns: repeat(2, 1fr);
         gap: 15px;
+        max-width: 800px;
     }
 }
-@media (min-width: 900px) {
+@media (min-width: 1070px) {
     .all-projects {
         grid-template-columns: repeat(3, 1fr);
         gap: 20px;
+        max-width: 1100px;
     }
 }
