--- a/src/about-me.css
+++ b/src/about-me.css
@@ -35,7 +35,7 @@
     font-size: 1em;
     line-height: 1.6;
     margin-bottom: 20px;
-    text-align: left;
+    text-align: justify;
 }
 
 /* List */
@@ -57,9 +57,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
+    gap: 10px;
+    margin-top: 10px;
 }
+
 .skills-list-container ul {
     background: #e9ecef;
     padding: 10px;
@@ -68,12 +69,32 @@
     flex: 1 1 200px; /*Grow, shrink and basis for flex items respectively*/
     max-width: 300px; /*limits flex item width */
 }
+
 .hard-skills-list-container {
     display: flex;
-    flex-wrap: row;
+    flex-wrap: wrap;
     justify-content: center;
-    gap: 20px;
+    gap: 10px;
     margin-top: 10px;
+}
+
+.hard-skills-list-container ul {
+    background: #e9ecef;
+    padding: 10px;
+    border-radius: 5px;
+    list-style-type: none;
+    flex: 1 1 200px; /*Grow, shrink and basis for flex items respectively*/
+    max-width: 300px; /*limits flex item width */
+}
+
+.hard-skill-category {
+    flex: 1 1 200px;
+    max-width: 300px;
+}
+
+.cooking-skills{
+    flex: 1 1 200px;
+    max-width: 300px;
 }
 /* Nested lists */
 .about-me ul ul {
@@ -90,20 +111,26 @@
         max-width: 900px;
     }
 }
+
 @media (max-width: 768px) {
+    
     .about-me {
         padding: 15px;
         max-width: 600px;
     }
+
     .about-me h1 {
         font-size: 1.5em;
     }
+
     .about-me h2 {
-        font-size: 1.2em;
+        font-size: 1.5em;
     }
+
     .skills-list-container {
         justify-content: center;
     }
+
     .hard-skills-list-container {
         justify-content: center;
     }
@@ -114,18 +141,26 @@
         padding: 10px;
         max-width: 100%;
     }
+
     .about-me h1 {
-        font-size: 1.2em;
+        font-size: 1.5em;
     }
+
     .about-me h2 {
-        font-size: 1em;
+        font-size: 1.5em;
     }
+
     .skills-list-container {
         flex-direction: column;
         align-items: center;
     }
+
     .hard-skills-list-container {
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
+    }
+
+    .cooking-skills {
+        min-width: 100%;
     }
 }
